--- a/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
+++ b/src/app/components/shared/inputs/search-auto-complete/search-auto-complete.component.html
@@ -1,12 +1,10 @@
 <div class="relative" #dropdownContainer>
   <div class="relative w-full">
     <div
-      class="absolute flex items-center justify-center left-0 w-8 rounded-l-md h-full border-surface border"
-      [style.background]="'var(--p-inputgroup-addon-background)'"
-
+      class="absolute flex items-center justify-center left-0 w-10 rounded-l-2xl h-full"
       [hidden]="!showIconOptionSelected"
     >
-      <i class="pi pi-check-circle text-xl text-green-400"></i>
+      <i class="pi pi-check-circle text-xl text-emerald-600"></i>
     </div>
     <app-text-input
       [icon]="icon"
