--- a/src/app/components/shared/inputs/time-picker-input/time-picker-input.component.html
+++ b/src/app/components/shared/inputs/time-picker-input/time-picker-input.component.html
@@ -1,6 +1,4 @@
-<div
-  class="flex flex-row-reverse justify-end flex-row items-center gap-2"
-  >
+<div class="flex flex-row-reverse justify-end items-center gap-2">
   <!-- Hours -->
   <div class="flex flex-col items-center">
     <button
@@ -21,101 +19,101 @@
       [class]="inputsClass()"
       (blur)="onBlurInput(hour)"
       maxlength="2"
-      />
-      <button
-        pButton
-        icon="pi pi-chevron-down"
-        [class]="buttonsClass()"
-        (mousedown)="startContinuousChange(hour, 0, 23, 'decrement')"
-        (mouseup)="stopContinuousChange()"
-        (mouseleave)="stopContinuousChange()"
-        severity="secondary"
-        type="button"
-        tabindex="-1"
-      ></button>
-    </div>
+    />
+    <button
+      pButton
+      icon="pi pi-chevron-down"
+      [class]="buttonsClass()"
+      (mousedown)="startContinuousChange(hour, 0, 23, 'decrement')"
+      (mouseup)="stopContinuousChange()"
+      (mouseleave)="stopContinuousChange()"
+      severity="secondary"
+      type="button"
+      tabindex="-1"
+    ></button>
+  </div>
 
-    <span>:</span>
+  <span>:</span>
 
-    <!-- Minutes -->
-    <div class="flex flex-col items-center">
-      <button
-        pButton
-        icon="pi pi-chevron-up"
-        [class]="buttonsClass()"
-        (mousedown)="startContinuousChange(minutes, 0, 59, 'increment')"
-        (mouseup)="stopContinuousChange()"
-        (mouseleave)="stopContinuousChange()"
-        type="button"
-        severity="secondary"
-        tabindex="-1"
-      ></button>
-      <input
-        type="text"
-        inputmode="numeric"
-        [formControl]="minutes"
-        [class]="inputsClass()"
-        (blur)="onBlurInput(minutes)"
-        maxlength="2"
-        />
-        <button
-          pButton
-          icon="pi pi-chevron-down"
-          [class]="buttonsClass()"
-          (mousedown)="startContinuousChange(minutes, 0, 59, 'decrement')"
-          (mouseup)="stopContinuousChange()"
-          (mouseleave)="stopContinuousChange()"
-          severity="secondary"
-          type="button"
-          tabindex="-1"
-        ></button>
-      </div>
+  <!-- Minutes -->
+  <div class="flex flex-col items-center">
+    <button
+      pButton
+      icon="pi pi-chevron-up"
+      [class]="buttonsClass()"
+      (mousedown)="startContinuousChange(minutes, 0, 59, 'increment')"
+      (mouseup)="stopContinuousChange()"
+      (mouseleave)="stopContinuousChange()"
+      type="button"
+      severity="secondary"
+      tabindex="-1"
+    ></button>
+    <input
+      type="text"
+      inputmode="numeric"
+      [formControl]="minutes"
+      [class]="inputsClass()"
+      (blur)="onBlurInput(minutes)"
+      maxlength="2"
+    />
+    <button
+      pButton
+      icon="pi pi-chevron-down"
+      [class]="buttonsClass()"
+      (mousedown)="startContinuousChange(minutes, 0, 59, 'decrement')"
+      (mouseup)="stopContinuousChange()"
+      (mouseleave)="stopContinuousChange()"
+      severity="secondary"
+      type="button"
+      tabindex="-1"
+    ></button>
+  </div>
 
-      <span>:</span>
+  <span>:</span>
 
-      <!-- Seconds -->
-      <div class="flex flex-col items-center">
-        <button
-          pButton
-          icon="pi pi-chevron-up"
-          [class]="buttonsClass()"
-          (mousedown)="startContinuousChange(second, 0, 59, 'increment')"
-          (mouseup)="stopContinuousChange()"
-          (mouseleave)="stopContinuousChange()"
-          severity="secondary"
-          type="button"
-          tabindex="-1"
-        ></button>
-        <input
-          type="text"
-          inputmode="numeric"
-          [formControl]="second"
-          [class]="inputsClass()"
-          (blur)="onBlurInput(second)"
-          maxlength="2"
-          />
-          <button
-            pButton
-            icon="pi pi-chevron-down"
-            [class]="buttonsClass()"
-            (mousedown)="startContinuousChange(second, 0, 59, 'decrement')"
-            (mouseup)="stopContinuousChange()"
-            (mouseleave)="stopContinuousChange()"
-            severity="secondary"
-            type="button"
-            tabindex="-1"
-          ></button>
-        </div>
-        @if (label) {
-          <span class="ml-2">{{ label }}</span>
-        }
-      </div>
+  <!-- Seconds -->
+  <div class="flex flex-col items-center">
+    <button
+      pButton
+      icon="pi pi-chevron-up"
+      [class]="buttonsClass()"
+      (mousedown)="startContinuousChange(second, 0, 59, 'increment')"
+      (mouseup)="stopContinuousChange()"
+      (mouseleave)="stopContinuousChange()"
+      severity="secondary"
+      type="button"
+      tabindex="-1"
+    ></button>
+    <input
+      type="text"
+      inputmode="numeric"
+      [formControl]="second"
+      [class]="inputsClass()"
+      (blur)="onBlurInput(second)"
+      maxlength="2"
+    />
+    <button
+      pButton
+      icon="pi pi-chevron-down"
+      [class]="buttonsClass()"
+      (mousedown)="startContinuousChange(second, 0, 59, 'decrement')"
+      (mouseup)="stopContinuousChange()"
+      (mouseleave)="stopContinuousChange()"
+      severity="secondary"
+      type="button"
+      tabindex="-1"
+    ></button>
+  </div>
+  @if (label) {
+  <span class="ml-2">{{ label }}</span>
+  }
+</div>
 
-      <!-- ⚠️ Validation Error Message -->
-      @if (control.touched && firstErrorMessage) {
-        <div class="px-4 mt-1">
-          <p-message severity="error" variant="simple" size="small">
-            {{ firstErrorMessage }}
-          </p-message>
-        </div>
-      }
+<!-- ⚠️ Validation Error Message -->
+@if (control.touched && firstErrorMessage) {
+<div class="px-4 mt-1">
+  <p-message severity="error" variant="simple" size="small">
+    {{ firstErrorMessage }}
+  </p-message>
+</div>
+}
