style(tab-manager): update sub-tab bar animation and style

--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.html
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.html
@@ -39,10 +39,10 @@
   [(value)]="selectTab().selectedSubTab"
   (valueChange)="onSubTabChange($event)"
 >
-  <div class="w-full overflow-x-auto">
+  <div class="w-full overflow-x-auto" #tabContent>
     <p-tablist>
       @for (view of selectTab().config.subTab; track $index) {
-      <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
+       <p-tab class="text-sm" [value]="$index">{{ view.title }}</p-tab>
       }
     </p-tablist>
   </div>
