feat(components/shared/inputs)[theme-management]: add new style and animation

--- a/src/app/components/shared/layout/header/theme-management/theme-management.component.html
+++ b/src/app/components/shared/layout/header/theme-management/theme-management.component.html
@@ -1,8 +1,8 @@
 <p-button
   (onClick)="toggleTheme()"
   [icon]="'pi ' + icon()"
-  styleClass="bg-emphasis text-muted-color-emphasis hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors duration-300"
-  size="small"
+  styleClass="bg-surface-200 dark:bg-surface-700 border-2 border-transparent text-muted-color-emphasis hover:bg-gray-200 hover:rotate-360 dark:hover:bg-gray-700 transition-all dark:rotate-90 duration-500"
+  class="font-medium text-2xl transition-transform"
   [rounded]="true"
   aria-label="Toggle Theme"
 ></p-button>
