--- a/src/app/components/shared/layout/header/user-profile/user-profile.component.html
+++ b/src/app/components/shared/layout/header/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <!-- User Profile / Skeleton Loader Container -->
 <div
-  class="flex h-10 gap-2 rounded-md border shadow-md bg-button-secondary text-button-secondary hover:bg-button-secondary-hover transition-all"
+  class="flex h-10 gap-2 rounded-full bg-button-secondary text-button-secondary hover:bg-button-secondary-hover hover:scale-105 transition-all duration-50 active:translate-y-0.5 active:shadow-sm active:scale-100"
 >
   <!-- Skeleton State -->
   <div
@@ -24,20 +24,18 @@
   <ng-template #loadedProfile>
     <div
       (click)="op.toggle($event)"
-      class="flex items-center cursor-pointer rounded-2xl"
+      class="flex items-center cursor-pointer rounded-full"
     >
       <!-- Avatar -->
       <p-avatar
         icon="pi pi-user"
         shape="square"
         size="normal"
-        class="w-10 h-full"
+        class="w-10 h-full rounded-bl-2xl rounded-full shadow-[-5px_0_5px_rgba(0,0,0,0.4)] ml-2.5"
       />
 
-      <div class="h-full w-0.5 bg-gray-600 ml-2"></div>
-
       <!-- Username -->
-      <div class="flex gap-2 items-center text-sm pl-2 py-1 rounded-2xl">
+      <div class="flex gap-2 items-center text-sm font-medium pl-2 py-1 rounded-2xl">
         <span>{{ profile()?.UserName }}</span>
         <i class="pi pi-angle-down text-xs mt-1"></i>
       </div>
@@ -46,16 +44,23 @@
 </div>
 
 <!-- Popover Menu -->
-<p-popover #op>
-  <div class="w-64 p-4 rounded-xl flex flex-col gap-3 font-medium" dir="rtl">
+<p-popover
+  [dt]="{
+    root: {
+      borderRadius: '2rem',
+    }
+  }"
+  #op
+>
+  <div class="w-64 flex flex-col gap-1 font-medium" dir="rtl">
     <!-- User Info Header -->
-    <div class="flex items-center gap-3 border-b pb-3">
+    <div class="flex items-center gap-3 pb-3">
       <div
-        class="w-10 h-10 rounded-full bg-gray-200 flex items-center justify-center text-lg font-bold text-gray-600"
+        class="w-15 h-15 rounded-full bg-gray-200 flex items-center justify-center text-lg font-bold text-gray-600"
       >
         {{ profile()?.UserName?.slice(0, 2) }}
       </div>
-      <div class="flex flex-col">
+      <div class="flex flex-col gap-1">
         <span class="text-base">{{ profile()?.UserName }}</span>
         <span class="text-sm text-gray-500">{{ profile()?.MobileNumber }}</span>
       </div>
@@ -64,20 +69,21 @@
     <!-- Profile Button -->
     <button
       (click)="openProfile(op)"
-      class="w-full flex flex-row-reverse items-center justify-end gap-2 px-3 py-2 rounded-lg hover:bg-emphasis transition-colors"
+      class="w-full h-[3rem] flex flex-row-reverse items-center justify-end gap-2 px-3 py-2 rounded-2xl dark:bg-primary-800 bg-primary-100 dark:hover:bg-primary-600 hover:bg-primary-300 transition-colors"
     >
       <span>پروفایل من</span>
-      <i class="pi pi-user text-gray-500"></i>
+      <i class="pi pi-user text-color-emphasis"></i>
     </button>
 
     <!-- Logout Button -->
     <p-button
       severity="danger"
       variant="text"
-      styleClass="w-full flex flex-row-reverse items-center justify-end gap-2 px-3 py-2 rounded-lg"
+      styleClass="w-full h-full flex flex-row-reverse focus:outline-0 rounded-2xl items-center justify-end dark:hover:bg-red-900 hover:bg-red-100"
+      class="outline-0"
       (click)="logout(op)"
     >
-      <span>خروج</span>
+      <span class="text-red-500">خروج</span>
       <i class="pi pi-sign-out mt-1 text-red-500"></i>
     </p-button>
   </div>
