--- a/src/app/components/shared/layout/sidebar/logo/logo.component.html
+++ b/src/app/components/shared/layout/sidebar/logo/logo.component.html
@@ -1,10 +1,19 @@
-<div class="flex flex-col items-center h-50">
-  <div class="h-40 w-full flex justify-center">
+<div class="flex flex-col items-center h-60">
+  <div class="h-50 w-full flex justify-center">
     <img
       src="/assets/rmto-logo.png"
-      class="object-cover h-full"
+      class="object-cover dark:hidden h-full"
+      alt="RMTO Logo"
+    />
+
+    <img
+      src="/assets/rmto-logo-dark.png"
+      class="object-cover hidden dark:block h-full"
       alt="RMTO Logo"
     />
   </div>
-  <span class="text-center text-xs font-bold" [innerHTML]="websiteTitle"></span>
+  <span
+    class="text-center text-xs font-bold mb-[-20px]"
+    [innerHTML]="websiteTitle"
+  ></span>
 </div>
