refactor(logo.component):remove unused margin

--- a/src/app/components/shared/layout/sidebar/logo/logo.component.html
+++ b/src/app/components/shared/layout/sidebar/logo/logo.component.html
@@ -12,8 +12,5 @@
       alt="RMTO Logo"
     />
   </div>
-  <span
-    class="text-center text-xs font-bold mb-[-20px]"
-    [innerHTML]="websiteTitle"
-  ></span>
+  <span class="text-center text-xs" [innerHTML]="websiteTitle"></span>
 </div>
