refactor(sidebar):change sidebar width on mobile

--- a/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.scss
+++ b/src/app/components/shared/layout/sidebar/sidebar/sidebar.component.scss
@@ -1,4 +1,8 @@
 ::ng-deep .p-drawer-content {
- direction: ltr;
- padding: 0;
+  direction: ltr;
+  padding: 0;
+}
+
+::ng-deep .p-drawer-right {
+  width: 18rem;
 }
