refactor(tab-manager):add padding to sub tabs

--- a/src/app/components/shared/layout/tab-manager/tab-manager.component.scss
+++ b/src/app/components/shared/layout/tab-manager/tab-manager.component.scss
@@ -8,7 +8,7 @@
 
 ::ng-deep div.p-tablist-tab-list {
   background-color: transparent;
-  padding: 0;
+  padding: 0 8px 0 0;
   margin: 0;
   .p-tab {
     border: none;
