refactor(components/shared/layout)[mobile-tab-bar]: udpate active process style
- Updated background

--- a/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
+++ b/src/app/components/shared/layout/mobile-tab-bar/mobile-tab-bar.component.html
@@ -20,7 +20,7 @@
         [severity]="isTabActive(tab) ? 'info' : 'secondary'"
         class="transition-transform duration-500 ease-in-out"
         [ngClass]="{
-          'scale-170 sm:scale-180 bg-info border-2 border-primary-emphasis':
+          'scale-170 sm:scale-180 bg-primary-400 border-2 border-primary-emphasis':
             isTabActive(tab),
           'scale-120 sm:scale-130 bg-secondary': !isTabActive(tab)
         }"
