--- a/src/app/components/shared/main-view/carousel/carousel.component.html
+++ b/src/app/components/shared/main-view/carousel/carousel.component.html
@@ -1,3 +1,4 @@
+<!-- Skeleton -->
 @if (images().length === 0) {
 <div class="flex w-screen justify-center gap-4 my-[1rem] px-[3rem] mb-10">
   @for (item of skeletonArrayNumber; track $index) {
@@ -15,6 +16,7 @@
   }
 </div>
 }@else {
+<!-- Carousel -->
 <p-carousel
   [value]="images()"
   [numVisible]="3"
@@ -23,15 +25,20 @@
   [responsiveOptions]="customCarouselTokens().responsiveOptions"
   [autoplayInterval]="customCarouselTokens().autoplayInterval"
   [dt]="customCarouselTokens()"
-  class="w-full items-center mb-[2rem]"
+  class="w-full min-h-[10rem] max-h-[15rem] items-center mb-[2rem]"
 >
   <ng-template #item let-product>
-    <div class="w-auto m-3 rounded-2xl shadow-[0_0_10px_rgba(0,0,0,1)]">
-      <img
-        class="w-full rounded-2xl border-black max-h-[15rem]"
-        [src]="product.imgLink"
-        [alt]="product.title"
-      />
+    <!-- Carousel cards -->
+    <div
+      class="w-auto h-[13rem] m-3 rounded-2xl shadow-[0_0_10px_rgba(0,0,0,1)]"
+    >
+      <a [href]="product.imgLink" target="_blank">
+        <img
+          class="w-full h-full rounded-2xl"
+          [src]="product.imgSrc"
+          [alt]="product.title"
+        />
+      </a>
     </div>
   </ng-template>
 </p-carousel>
