refactor(components/layout/header/)[header]: adjust header components places

--- a/src/app/components/shared/layout/header/header/header.component.html
+++ b/src/app/components/shared/layout/header/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="relative w-full h-full bg-primary text-primary-contrast lg:pr-4 lg:py-2 z-15 flex items-center justify-between"
+  class="relative w-full h-full bg-primary text-primary-contrast lg:pr-4 py-2 z-15 flex items-center justify-between"
 >
   <app-button
     severity="primary"
