feat(exit-confirmation-dialog):add exit-confiramtion on back refersh and exit page

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -28,4 +28,6 @@
     <app-mobile-tab-bar class="lg:hidden" />
     <app-footer class="w-full hidden lg:block" />
   </footer>
+
+  <app-exit-confirmation-dialog />
 </div>
