--- a/src/app/components/shared/form-card/form-card.component.html
+++ b/src/app/components/shared/form-card/form-card.component.html
@@ -1,4 +1,4 @@
-<p-card [style.background]="'rgba(0,0,0,0)'" styleClass="overflow-hidden relative px-2 sm:px-6 md:px-12 lg:px-16 py-6 shadow-2xl border rounded-2xl">
-<div class="overlay bg-surface-0" [style.background]="'var(--p-card-background)'" ></div>
+<p-card [style.background]="'rgba(0,0,0,0)'" styleClass="relative px-2 sm:px-6 md:px-12 lg:px-16 py-6 shadow-2xl border rounded-2xl">
+<div class="overlay bg-surface-0 rounded-2xl" [style.background]="'var(--p-card-background)'" ></div>
     <ng-content></ng-content>
 </p-card>
