--- a/src/app/components/shared/full-screen-background/full-screen-background.component.html
+++ b/src/app/components/shared/full-screen-background/full-screen-background.component.html
@@ -1,12 +1,23 @@
+<!-- desktop screen -->
 <div
-  class="fixed top-0 left-0 w-full h-full"
+  class="fixed w-full h-full"
+  [ngStyle]="{
+    'background-image': 'url(' + lgImageUrl + ')',
+    'background-size': lgBackgroundSize,
+    'background-position': lgBackgroundPosition,
+    'background-repeat': 'no-repeat',
+    'z-index':-100,
+  }"
+></div>
+
+<!-- mobile screen -->
+<div
+  class="lg:hidden fixed w-full h-full"
   [ngStyle]="{
     'background-image': 'url(' + imageUrl + ')',
     'background-size': backgroundSize,
     'background-position': backgroundPosition,
     'background-repeat': 'no-repeat',
-    'filter': 'blur(' + blur + 'px)',
     'z-index':-100,
   }"
 ></div>
-
