--- a/src/app/pages/auth/forget-password-page/forget-password-page.component.html
+++ b/src/app/pages/auth/forget-password-page/forget-password-page.component.html
@@ -1,10 +1,9 @@
-<app-full-screen-background
-[blur]="5"
-imageUrl="background_form_login.webp"  />
+<app-full-screen-background [blur]="5" />
 
-
-<div class="flex items-center mx-6 justify-center md:justify-end md:ml-16 min-h-screen">
- <app-form-card class="forget-password-page">
-   <app-forget-password-form />
- </app-form-card>
+<div
+  class="flex items-center mx-6 justify-center md:justify-end md:ml-16 min-h-screen"
+>
+  <app-form-card class="forget-password-page">
+    <app-forget-password-form />
+  </app-form-card>
 </div>
