--- a/src/app/components/shared/terminal-card/terminal-card.component.html
+++ b/src/app/components/shared/terminal-card/terminal-card.component.html
@@ -1,24 +1,26 @@
 @if (terminal) {
-<p-card styleClass="w-full shadow-lg rounded-lg h-40">
-  <ng-template #header>
-    <div class="text-md md:text-lg px-2 md:px-6 font-bold text-primary pt-4">
-      {{ terminal.LAPTitle }}
+<a [href]="getLoginLink()">
+  <p-card
+    class="flex justify-center items-center text-center"
+    styleClass="w-full rounded-3xl shadow-[0px_4px_8px_var(--p-surface-500)] h-full"
+  >
+    <ng-template #header>
+      <div class="text-md md:text-lg px-2 md:px-6 font-bold text-primary pt-4">
+        {{ terminal.LAPTitle }}
+      </div>
+    </ng-template>
+
+    @if (terminal.Description.trim() != '') {
+    <div class="mb-6 px-2 md:px-6">
+      {{ terminal.Description }}
     </div>
-  </ng-template>
+    }
 
-  @if (terminal.Description.trim() != '') {
-  <div class="mb-6 px-2 md:px-6">
-    {{ terminal.Description }}
-  </div>
-  }
-
-  <div class="grid md:justify-center">
-    <a [href]="getLoginLink()">
-      <app-button
-        label="ورود به صفحه"
-        styleClass="w-full text-md  md:w-45 h-12"
-      />
-    </a>
-  </div>
-</p-card>
+    <div>
+      <img [src]="terminal.ImageLink" [alt]="terminal.LAPTitle" />
+    </div>
+  </p-card>
+</a>
 }
+<!-- Skeleton -->
+@else{ }
