fix(lad-placese-form):fix delete message and update component style

--- a/src/app/components/forms/lad-places-form/lad-places-form.component.html
+++ b/src/app/components/forms/lad-places-form/lad-places-form.component.html
@@ -17,6 +17,7 @@
   [paginatorLocale]="tableUi.paginatorLocale"
   [rows]="tableUi.rows"
   [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
+  [stripedRows] ="tableUi.stripedRows"
 >
   <ng-template #caption>
     <div class="flex items-center justify-between">
