fix(sequential-turns-form):fix delete message and update component style

--- a/src/app/components/forms/sequential-turns-management-form/sequential-turns-form/sequential-turns-form.component.html
+++ b/src/app/components/forms/sequential-turns-management-form/sequential-turns-form/sequential-turns-form.component.html
@@ -23,6 +23,7 @@
   [paginatorLocale]="tableUi.paginatorLocale"
   [rows]="tableUi.rows"
   [rowsPerPageOptions]="tableUi.rowsPerPageOptions"
+  [stripedRows]="tableUi.stripedRows"
 >
   <!-- 🔘 Toolbar (New Button) -->
   <ng-template #caption>
